--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   pdf: ^3.8.0
   printing: ^5.8.0
   intl: ^0.19.0
+  onesignal_flutter: ^5.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
